[tool.poetry]
name = "postback"
version = "0.1.0"
description = "Encrypted S3 backups for Postgres"
authors = ["R. Miles McCain <github@sendmiles.email>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.51"
croniter = "^1.3.5"
click = "^8.1.3"
psycopg = "^3.0.16"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
