[tool.poetry]
name = "postback"
version = "0.1.0"
description = "Encrypted S3 backups for Postgres"
authors = ["R. Miles McCain <github@sendmiles.email>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
croniter = "^1.4.1"
click = "^8.1.7"
psycopg = "^3.1.10"
loguru = "^0.7.2"
awscli = "^1.29.50"
requests = "^2.31.0"
certifi = "^2023.7.22"

[tool.poetry.dev-dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
